example/lib/src/arbs/errors/app_pa.arb
{
  "@@locale": "pa",
  "@@author": "example@gmail.com",
  "@@last_modified": "2026-07-14T13:18:25.440497Z",
  "@@comment": "Generated from Google Sheets",
  "error": "An error occurred",
  "@error": {
    "description": "Ошибка"
  },
  "unexpectedError": "An unexpected error occurred",
  "@unexpectedError": {
    "description": "Произошла какая то ошибка"
  },
  "bugReportSentText": "ਬੱਗ ਰਿਪੋਰਟ ਸਫਲਤਾਪੂਰਵਕ ਭੇਜੀ ਗਈ ਹੈ.",
  "@bugReportSentText": {
    "description": "Сообщение об успешной отправке баг репорта"
  }
}